--- a/src/lib/app.scss
+++ b/src/lib/app.scss
@@ -4,4 +4,6 @@ html {
 
 body {
   margin: 0px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
+      'Open Sans', 'Helvetica Neue', sans-serif;
 }
